--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "carlos-soriano",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -13,58 +13,58 @@
     "servelocal": "vue-cli-service serve --host localhost"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/vue-fontawesome": "^0.1.10",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@trainiac/html2canvas": "^1.0.0",
-    "axios": "^0.21.4",
-    "bootstrap": "^4.6.0",
-    "chalk": "^4.1.2",
-    "core-js": "^3.18.1",
+    "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
+    "chalk": "^5.2.0",
+    "core-js": "^3.28.0",
     "devicons": "^1.8.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
-    "fontfaceobserver": "^2.1.0",
+    "fontfaceobserver": "^2.3.0",
     "fs": "0.0.1-security",
     "google-fonts-plugin": "^5.0.2",
-    "html2canvas": "^1.3.2",
-    "jest": "^25.5.4",
-    "jquery": "^3.6.0",
+    "html2canvas": "^1.4.1",
+    "jest": "^29.4.2",
+    "jquery": "^3.6.3",
     "jquery.easing": "^1.4.1",
-    "js-yaml": "^3.14.1",
-    "jsdom": "^16.7.0",
-    "jspdf": "^2.4.0",
+    "js-yaml": "^4.1.0",
+    "jsdom": "^21.1.0",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
-    "markdown-it": "^11.0.1",
-    "moment": "^2.29.1",
+    "markdown-it": "^13.0.1",
+    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
-    "portal-vue": "^2.1.7",
-    "postcss-preset-env": "^6.7.0",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.2",
-    "vuex": "^3.6.2"
+    "portal-vue": "^3.0.0",
+    "postcss-preset-env": "^8.0.1",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-router": "^4.5.13",
-    "@vue/cli-plugin-unit-jest": "^4.5.13",
-    "@vue/cli-plugin-vuex": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
-    "@vue/test-utils": "1.0.0-beta.31",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/test-utils": "2.2.10",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "jest-canvas-mock": "^2.3.1",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "jest-canvas-mock": "^2.4.0",
     "matchmedia-polyfill": "^0.3.2",
-    "sass": "^1.42.1",
-    "sass-loader": "^8.0.2",
-    "vue-markdown-loader": "^2.4.1",
-    "vue-template-compiler": "^2.6.14"
+    "sass": "^1.58.1",
+    "sass-loader": "^13.2.0",
+    "vue-markdown-loader": "^2.5.0",
+    "vue-template-compiler": "^2.7.14"
   }
 }
