--- a/app/package.json
+++ b/app/package.json
@@ -11,22 +11,61 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@trainiac/html2canvas": "^1.0.0",
+    "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
+    "chalk": "^5.2.0",
+    "core-js": "^3.28.0",
+    "devicons": "^1.8.0",
+    "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
+    "fontfaceobserver": "^2.3.0",
+    "fs": "0.0.1-security",
+    "google-fonts-plugin": "^5.0.2",
+    "html2canvas": "^1.4.1",
+    "jest": "^29.4.2",
+    "jquery": "^3.6.3",
+    "jquery.easing": "^1.4.1",
+    "js-yaml": "^4.1.0",
+    "jsdom": "^21.1.0",
+    "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
+    "markdown-it": "^13.0.1",
+    "moment": "^2.29.4",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^3.0.0",
+    "postcss-preset-env": "^8.0.1",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "jest-canvas-mock": "^2.4.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "sass": "^1.58.1",
+    "sass-loader": "^13.2.0",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
+    "vue-markdown-loader": "^2.5.0",
+    "vue-template-compiler": "^2.7.14",
     "vue-tsc": "^1.0.12"
   }
 }
