--- a/app/.prettierrc.json
+++ b/app/.prettierrc.json
@@ -1,1 +1,9 @@
-{}
+{
+  "semi": true,
+  "trailingComma": "none",
+  "singleQuote": true,
+  "printWidth": 80,
+  "arrowParens": "avoid",
+  "tabWidth": 2,
+  "bracketSameLine": true
+}
