--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "shortpoet",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -58,6 +59,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "file-loader": "^6.2.0",
     "jest-canvas-mock": "^2.4.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
@@ -65,6 +67,7 @@
     "sass-loader": "^13.2.0",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
+    "vite-plugin-md": "^0.22.5",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.7.14",
     "vue-tsc": "^1.0.12"
