add check dir to tsconfig exclude

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -13,6 +13,7 @@
     "src/**/*.spec.tsx",
     "src/**/*.spec.jsx",
     "src/_boilerplate/**/*",
+    "src/__check/**/*",
   ],
   "compilerOptions": {
     "baseUrl": ".",
