--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -23,7 +23,7 @@ on:
       - 'shortpoet_site/**'
       - 'tic_tac_toe/**'
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10 #
   release:
     types:
       - published
