--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -71,7 +71,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: '16'
 
@@ -96,7 +96,7 @@ jobs:
   deploy:
     uses: shortpoet/.github/.github/workflows/deploy-dev_push-uat_merge-prod_release.yml@main
     secrets: inherit
-    needs: paths-filter
+    needs: [paths-filter, build-npm]
     # can't seem to use if release here because of needs
     if: |
       needs.paths-filter.outputs.infra_app == 'true' ||
