--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -77,6 +77,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         env:
