--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -77,7 +77,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '19'
-          registry-url: 'https://registry.npmjs.org'
+          # registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://npm.pkg.github.com'
+
 
       - name: Install dependencies
         env:
