--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@popperjs/core": "^2.11.6",
     "@trainiac/html2canvas": "^1.0.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
@@ -40,7 +41,6 @@
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
-    "popper.js": "^1.16.1",
     "portal-vue": "^3.0.0",
     "postcss-preset-env": "^8.0.1",
     "vite-plugin-require": "^1.1.10",
