--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -53,7 +53,7 @@ jobs:
       infra_app: ${{ steps.filter.outputs.infra_app }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: dorny/paths-filter@v2
         id: filter
         with:
@@ -63,7 +63,7 @@ jobs:
               - '.github/workflows/infra-app.yml'
               - 'app/**'
 
-  build-npm:
+  build-node:
     runs-on: ubuntu-latest
     needs: paths-filter
     if: |
@@ -93,7 +93,7 @@ jobs:
         env:
           NODE_ENV: production
         run: |
-          yarn build
+          yarn build-only
 
       - name: Compress build
         working-directory: app
