--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -108,7 +108,7 @@ jobs:
   deploy:
     uses: shortpoet/.github/.github/workflows/deploy-dev_push-uat_merge-prod_release.yml@main
     secrets: inherit
-    needs: [paths-filter, build-npm]
+    needs: [paths-filter, build-node]
     # can't seem to use if release here because of needs
     if: |
       needs.paths-filter.outputs.infra_app == 'true' ||
