--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -93,6 +93,7 @@ jobs:
         env:
           NODE_ENV: production
         run: |
+          yarn global add vite
           yarn build-only
 
       - name: Compress build
