--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.3",
     "chalk": "^5.2.0",
     "core-js": "^3.28.0",
+    "css-loader": "*",
     "devicons": "^1.8.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
@@ -42,11 +43,14 @@
     "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
     "portal-vue": "^3.0.0",
+    "postcss": ">=8.4.6 <9.0.0",
     "postcss-preset-env": "^8.0.1",
     "vite-plugin-require": "^1.1.10",
     "vue": "^3.2.47",
+    "vue-loader": "^17.0.1",
     "vue-router": "^4.1.6",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "webpack": ">=5.0.0 <6.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
@@ -66,7 +70,7 @@
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "typescript": "~4.7.4",
-    "vite": "^4.0.0",
+    "vite": "latest",
     "vite-plugin-md": "^0.22.5",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.7.14",
