--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
+    "build-ci": "cross-env NODE_ENV=production vite build --config vite.config.ts",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
@@ -70,7 +71,7 @@
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "typescript": "~4.7.4",
-    "vite": "latest",
+    "vite": "^4.1.4",
     "vite-plugin-md": "^0.22.5",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.7.14",
