--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -104,7 +104,7 @@ jobs:
         env:
           NODE_ENV: production
         run: |
-          pnpm build-only
+          pnpm build-ci
 
       - name: Compress build
         working-directory: app
