--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -107,6 +107,9 @@ jobs:
         env:
           NODE_ENV: production
         run: |
+          pwd
+          ls -la
+          ls -la node_modules
           npm run build-ci
           # pnpm build-ci
 
