--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,9 @@
     "portal-vue": "^3.0.0",
     "postcss": ">=8.4.6 <9.0.0",
     "postcss-preset-env": "^8.0.1",
+    "vite": "latest",
+    "vite-plugin-md": "^0.22.5",
+    "@vitejs/plugin-vue": "^4.0.0",
     "vue": "^3.2.47",
     "vue-loader": "^17.0.1",
     "vue-router": "^4.1.6",
@@ -56,7 +59,6 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.12",
-    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
@@ -70,8 +72,6 @@
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "typescript": "~4.7.4",
-    "vite": "^4.1.4",
-    "vite-plugin-md": "^0.22.5",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.7.14",
     "vue-tsc": "^1.0.12"
