--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -1,6 +1,11 @@
 ---
 name: App Infra
 
+env:
+  APP_DIR: app
+  IAC_DIR: .iac/infra_app
+  BUILD_DIR: build
+
 on:
   pull_request:
     branches:
@@ -8,27 +13,27 @@ on:
       - uat
       - develop
     paths:
-      - '.iac/infra_app/**'
+      - "{{ env.IAC_DIR }}/**"
       - '.github/workflows/infra-app.yml'
-      - 'app/**'
+      - "{{ env.APP_DIR }}/**"
   push:
     branches:
       - main
       - uat
       - develop
     paths:
-      - '.iac/infra_app/**'
+      - "{{ env.IAC_DIR }}/**"
       - '.github/workflows/infra-app.yml'
-      - 'app/**'
+      - "{{ env.APP_DIR }}/**"
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
   release:
     types:
       - published
     paths:
-      - '.iac/infra_app/**'
+      - "{{ env.IAC_DIR }}/**"
       - '.github/workflows/infra-app.yml'
-      - 'app/**'
+      - "{{ env.APP_DIR }}/**"
 
 permissions:
   contents: read
@@ -59,9 +64,9 @@ jobs:
         with:
           filters: |
             infra_app:
-              - '.iac/infra_app/aws/**'
+              - "{{ env.IAC_DIR }}/aws/**"
               - '.github/workflows/infra-app.yml'
-              - 'app/**'
+              - "{{ env.APP_DIR }}/**"
 
   build-node:
     runs-on: ubuntu-latest
@@ -90,7 +95,7 @@ jobs:
       #     key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
       #     restore-keys: |
       #       ${{ runner.os }}-pnpm-
-        
+
       - name: Install dependencies
         env:
           # GITHUB_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
@@ -121,7 +126,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build-${{ github.sha }}-${{ github.ref_name }}
-          path: app/build.zip
+          path: "{{ env.APP_DIR }}/{{ env.BUILD_DIR }}.zip"
 
   deploy:
     uses: shortpoet/.github/.github/workflows/deploy-dev_push-uat_merge-prod_release.yml@main
@@ -132,7 +137,7 @@ jobs:
       needs.paths-filter.outputs.infra_app == 'true' ||
       github.event_name == 'release'
     with:
-      base_path: .iac/infra_app/aws
+      base_path: "{{ env.IAC_DIR }}/aws"
       infra_type: App
       provider: aws
-      build_path: app/build
+      build_path: "{{ env.APP_DIR }}/{{ env.BUILD_DIR }}"
