--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -13,27 +13,27 @@ on:
       - uat
       - develop
     paths:
-      - "{{ env.IAC_DIR }}/**"
+      - "${{ env.IAC_DIR }}/**"
       - '.github/workflows/infra-app.yml'
-      - "{{ env.APP_DIR }}/**"
+      - "${{ env.APP_DIR }}/**"
   push:
     branches:
       - main
       - uat
       - develop
     paths:
-      - "{{ env.IAC_DIR }}/**"
+      - "${{ env.IAC_DIR }}/**"
       - '.github/workflows/infra-app.yml'
-      - "{{ env.APP_DIR }}/**"
+      - "${{ env.APP_DIR }}/**"
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
   release:
     types:
       - published
     paths:
-      - "{{ env.IAC_DIR }}/**"
+      - "${{ env.IAC_DIR }}/**"
       - '.github/workflows/infra-app.yml'
-      - "{{ env.APP_DIR }}/**"
+      - "${{ env.APP_DIR }}/**"
 
 permissions:
   contents: read
@@ -64,9 +64,9 @@ jobs:
         with:
           filters: |
             infra_app:
-              - "{{ env.IAC_DIR }}/aws/**"
+              - "${{ env.IAC_DIR }}/aws/**"
               - '.github/workflows/infra-app.yml'
-              - "{{ env.APP_DIR }}/**"
+              - "${{ env.APP_DIR }}/**"
 
   build-node:
     runs-on: ubuntu-latest
@@ -126,7 +126,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build-${{ github.sha }}-${{ github.ref_name }}
-          path: "{{ env.APP_DIR }}/{{ env.BUILD_DIR }}.zip"
+          path: "${{ env.APP_DIR }}/{{ env.BUILD_DIR }}.zip"
 
   deploy:
     uses: shortpoet/.github/.github/workflows/deploy-dev_push-uat_merge-prod_release.yml@main
@@ -137,7 +137,7 @@ jobs:
       needs.paths-filter.outputs.infra_app == 'true' ||
       github.event_name == 'release'
     with:
-      base_path: "{{ env.IAC_DIR }}/aws"
+      base_path: "${{ env.IAC_DIR }}/aws"
       infra_type: App
       provider: aws
-      build_path: "{{ env.APP_DIR }}/{{ env.BUILD_DIR }}"
+      build_path: "${{ env.APP_DIR }}/{{ env.BUILD_DIR }}"
