--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -42,6 +42,13 @@ permissions:
   # packages: read
 
 jobs:
+  dump-context:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
   paths-filter:
     if:
       (
