--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -133,18 +133,13 @@ jobs:
         run: zip -r ${{ env.BUILD_ARTIFACT }}.zip dist
 
       - name: Set build artifact UUID
-        if: |
-          (github.event_name == 'push' &&
-          (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main')
-          ) ||
-          github.event_name == 'release'
         id: build-artifact-uuid
         env:
           BUILD_ARTIFACT_UUID: build-${{ github.sha }}-${{ github.ref_name }}
           BUILD_ARTIFACT_UUID_UAT: build-${{ github.sha }}-${{ github.head_ref }}
           IS_DEV: ${{ github.ref == 'refs/heads/develop' }}
           IS_MAIN: ${{ github.ref == 'refs/heads/main' }}
-          IS_UAT: ${{ github.head_ref == 'uat' }} && ${{ github.base_ref == 'main' }} && ${{ github.event_name == 'pull_request' }} && startsWith(github.ref, 'refs/pull') && endsWith(github.ref, '/merge')
+          IS_UAT: ${{ github.head_ref == 'uat' }} && ${{ github.base_ref == 'main' }} && ${{ github.event_name == 'pull_request' }} && ${{ startsWith(github.ref, 'refs/pull') }} && ${{ endsWith(github.ref, '/merge') }}
         run: |
           if [ "$IS_DEV" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
