use correct build dir

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -9,6 +9,7 @@
   "exclude": [
     "node_modules",
     "dist",
+    "build",
     "src/**/*.spec.ts",
     "src/**/*.spec.js",
     "src/**/*.spec.tsx",
