only contents of build

--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -130,7 +130,9 @@ jobs:
 
       - name: Compress build
         working-directory: app
-        run: zip -r ${{ env.BUILD_ARTIFACT }}.zip build/*
+        run: |
+          cd build
+          zip -r ${{ env.BUILD_ARTIFACT }}.zip ./*
 
       - name: Set build artifact UUID
         id: build-artifact-uuid
