--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -130,11 +130,11 @@ jobs:
 
       - name: Compress build
         working-directory: app
-        run: |
-          zip -r ${{ env.BUILD_ARTIFACT }}.zip ${{ env.BUILD_DIR }}/*
         # run: |
-        #   cd build
-        #   zip -r ${{ env.BUILD_ARTIFACT }}.zip ./*
+        #   zip -r ${{ env.BUILD_ARTIFACT }}.zip ${{ env.BUILD_DIR }}/*
+        run: |
+          cd ${{ env.BUILD_DIR }}
+          zip -r ${{ env.BUILD_ARTIFACT }}.zip ./*
 
       - name: Set build artifact UUID
         id: build-artifact-uuid
@@ -163,7 +163,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.build-artifact-uuid.outputs.BUILD_ARTIFACT_UUID }}
-          path: "${{ env.APP_DIR }}/${{ env.BUILD_DIR }}.zip"
+          path: "${{ env.APP_DIR }}/${{ env.BUILD_DIR }}/${{ env.BUILD_ARTIFACT }}.zip"
 
       - name: Upload build - UAT
         id: upload-build-uat
