--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -175,7 +175,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.build-artifact-uuid.outputs.BUILD_ARTIFACT_UUID }}
-          path: "${{ env.APP_DIR }}/${{ env.BUILD_DIR }}.zip"
+          path: "${{ env.APP_DIR }}/${{ env.BUILD_DIR }}/${{ env.BUILD_ARTIFACT }}.zip"
 
   deploy:
     uses: shortpoet/.github/.github/workflows/deploy-dev_push-uat_merge-prod_release.yml@main
