--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -111,12 +111,12 @@ jobs:
           BUILD_ARTIFACT_UUID: build-${{ github.sha }}-${{ github.ref_name }}
           BUILD_ARTIFACT_UUID_UAT: build-${{ github.sha }}-${{ github.head_ref }}
           IS_DEV: ${{ github.ref == 'refs/heads/develop' }}
-          IS_PROD: ${{ github.event_name == 'release' }} && ${{ startsWith(github.ref, 'refs/tags/v') }}
+          IS_MAIN: ${{ github.ref == 'refs/heads/main' }}
           IS_UAT: ${{ github.head_ref == 'uat' }} && ${{ github.base_ref == 'main' }} && ${{ github.event_name == 'pull_request' }} && ${{ startsWith(github.ref, 'refs/pull') }} && ${{ endsWith(github.ref, '/merge') }}
         run: |
           if [ "$IS_DEV" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
-          elif [ "$IS_PROD" = 'true && true' ]; then
+          elif [ "$IS_MAIN" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
           elif [ "$IS_UAT" = 'true && true && true && true && true' ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID_UAT}" >> $GITHUB_OUTPUT
