--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -113,10 +113,13 @@ jobs:
           IS_DEV: ${{ github.ref == 'refs/heads/develop' }}
           IS_MAIN: ${{ github.ref == 'refs/heads/main' }}
           IS_UAT: ${{ github.head_ref == 'uat' }} && ${{ github.base_ref == 'main' }} && ${{ github.event_name == 'pull_request' }} && ${{ startsWith(github.ref, 'refs/pull') }} && ${{ endsWith(github.ref, '/merge') }}
+          IS_RELEASE: ${{ github.event_name == 'release' }} && startsWith(github.ref, 'refs/tags/v')
         run: |
           if [ "$IS_DEV" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
           elif [ "$IS_MAIN" = true ]; then
+            echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
+          elif [ "$IS_RELEASE" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
           elif [ "$IS_UAT" = 'true && true && true && true && true' ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID_UAT}" >> $GITHUB_OUTPUT
@@ -124,24 +127,6 @@ jobs:
 
       - name: Upload build
         id: upload-build
-        if: |
-          (github.event_name == 'push' &&
-          (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main')
-          ) ||
-          github.event_name == 'release'
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ steps.build-artifact-uuid.outputs.BUILD_ARTIFACT_UUID }}
-          path: "${{ env.APP_DIR }}/${{ env.BUILD_DIR }}/${{ env.BUILD_ARTIFACT }}.zip"
-
-      - name: Upload build - UAT
-        id: upload-build-uat
-        if: |
-            (startsWith(github.ref, 'refs/pull') &&
-            endsWith(github.ref, '/merge') &&
-            github.head_ref == 'uat' &&
-            github.base_ref == 'main' &&
-            github.event_name == 'pull_request')
         uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.build-artifact-uuid.outputs.BUILD_ARTIFACT_UUID }}
