--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -113,7 +113,7 @@ jobs:
           IS_DEV: ${{ github.ref == 'refs/heads/develop' }}
           IS_MAIN: ${{ github.ref == 'refs/heads/main' }}
           IS_UAT: ${{ github.head_ref == 'uat' }} && ${{ github.base_ref == 'main' }} && ${{ github.event_name == 'pull_request' }} && ${{ startsWith(github.ref, 'refs/pull') }} && ${{ endsWith(github.ref, '/merge') }}
-          IS_RELEASE: ${{ github.event_name == 'release' }} && startsWith(github.ref, 'refs/tags/v')
+          IS_RELEASE: ${{ github.event_name == 'release' }} && ${{ startsWith(github.ref, 'refs/tags/v') }}
         run: |
           if [ "$IS_DEV" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
