--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -118,7 +118,7 @@ jobs:
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
           elif [ "$IS_MAIN" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
-          elif [ "$IS_RELEASE" = true ]; then
+          elif [ "$IS_RELEASE" = 'true && true' ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
           elif [ "$IS_UAT" = 'true && true && true && true && true' ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID_UAT}" >> $GITHUB_OUTPUT
