--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -52,7 +52,8 @@ jobs:
       ) ||
       (github.event_name == 'push' &&
         (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main')
-      )
+      ) ||
+      github.event_name == 'release'
     outputs:
       infra_app: ${{ steps.filter.outputs.infra_app }}
     runs-on: ubuntu-latest
