--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@popperjs/core": "^2.11.6",
     "@trainiac/html2canvas": "^1.0.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
@@ -49,9 +50,9 @@
     "postcss-preset-env": "^8.0.1",
     "vite": "latest",
     "vite-plugin-md": "^0.22.5",
-    "@vitejs/plugin-vue": "^4.0.0",
     "vue": "^3.2.47",
     "vue-loader": "^17.0.1",
+    "vue-meta": "^3.0.0-alpha.2",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0",
     "webpack": ">=5.0.0 <6.0.0"
