--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,10 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@popperjs/core": "^2.11.6",
     "@trainiac/html2canvas": "^1.0.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^9.13.0",
+    "@vueuse/head": "^1.1.9",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "chalk": "^5.2.0",
@@ -49,7 +52,6 @@
     "postcss-preset-env": "^8.0.1",
     "vite": "latest",
     "vite-plugin-md": "^0.22.5",
-    "@vitejs/plugin-vue": "^4.0.0",
     "vue": "^3.2.47",
     "vue-loader": "^17.0.1",
     "vue-router": "^4.1.6",
@@ -59,6 +61,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jest": "^29.4.0",
+    "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^18.11.12",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
@@ -67,11 +70,16 @@
     "eslint-plugin-vue": "^9.3.0",
     "file-loader": "^6.2.0",
     "jest-canvas-mock": "^2.4.0",
+    "markdown-it-link-attributes": "^4.0.1",
+    "markdown-it-shiki": "^0.8.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "typescript": "~4.7.4",
+    "unplugin-auto-import": "^0.15.0",
+    "unplugin-vue-components": "^0.24.0",
+    "vite-plugin-vue-inspector": "^3.3.2",
     "vue-markdown-loader": "^2.5.0",
     "vue-template-compiler": "^2.7.14",
     "vue-tsc": "^1.0.12"
