--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -25,8 +25,8 @@
         "src/*"
       ]
     },
-    "module": "ES2020",
-    "target": "ES2020",
+    "module": "ESNext",
+    "target": "ESNext",
     "lib": [
       "ESNext",
       "DOM"
@@ -37,11 +37,20 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
     "types": [
       "node",
-      // "jest"
+      "vitest",
+      "vite/client",
+      "vue/ref-macros",
+      "vite-plugin-pages/client",
+      "vite-plugin-vue-component-preview/client",
+      "vite-plugin-vue-layouts/client",
+      "vite-plugin-pwa/client",
+      "unplugin-vue-macros/macros-global"
     ],
-    "allowJs": true
   },
   "references": [
     {
