--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -85,22 +85,21 @@ jobs:
 
       - name: Install dependencies
         env:
-          NODE_ENV: production
-        working-directory: app
+          NODE_ENV: development
+        working-directory: ${{ env.APP_DIR }}
         run: |
-          npm install --global vite
-          rm package-lock.json
-          npm i
+          npm install --global vite pnpm
+          pnpm i
 
       - name: Build
-        working-directory: app
+        working-directory: ${{ env.APP_DIR }}
         env:
           NODE_ENV: production
         run: |
-          npm run build-ci
+          pnpm run build-ci
 
       - name: Compress build
-        working-directory: app
+        working-directory: ${{ env.APP_DIR }}
         run: |
           cd ${{ env.BUILD_DIR }}
           zip -r ${{ env.BUILD_ARTIFACT }}.zip ./*
