--- a/app/package.json
+++ b/app/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check build-only",
+    "dev": "vite --port 8888 --open",
     "preview": "vite preview",
+    "build": "vite-ssg build --outDir build",
+    "build:v": "run-p type-check build-only",
     "build-only": "vite build",
-    "build-ci": "vite build --config vite.config.ts",
+    "build-ci": "vite-ssg build --outDir build",
+    "build:v-ci": "vite build --config vite.config.ts",
     "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint .",
+    "lint:ext": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "preview-https": "serve dist",
+    "test": "vitest",
+    "test:e2e": "cypress open",
+    "test:unit": "vitest",
+    "up": "taze major -I"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
@@ -25,7 +33,6 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.13.0",
-    "@vueuse/head": "^1.1.9",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "chalk": "^5.2.0",
@@ -47,24 +54,33 @@
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
+    "nprogress": "^0.2.0",
     "portal-vue": "^3.0.0",
     "postcss": ">=8.4.6 <9.0.0",
     "postcss-preset-env": "^8.0.1",
     "vite": "latest",
     "vite-plugin-md": "^0.22.5",
     "vue": "^3.2.47",
+    "vue-i18n": "^9.2.2",
     "vue-loader": "^17.0.1",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.1.0",
-    "webpack": ">=5.0.0 <6.0.0"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.8.2",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/bootstrap": "^5.2.6",
     "@types/jest": "^29.4.0",
+    "@types/jquery": "^3.5.16",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^18.11.12",
+    "@types/nprogress": "^0.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue-macros/volar": "^0.5.15",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/test-utils": "^2.2.7",
+    "@vueuse/head": "^1.1.9",
+    "critters": "^0.0.16",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
@@ -79,8 +95,12 @@
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.15.0",
     "unplugin-vue-components": "^0.24.0",
+    "vite-plugin-pages": "^0.28.0",
+    "vite-plugin-vue-component-preview": "^1.1.5",
     "vite-plugin-vue-inspector": "^3.3.2",
+    "vite-ssg": "^0.22.1",
     "vue-markdown-loader": "^2.5.0",
+    "vue-router": "^4.1.6",
     "vue-template-compiler": "^2.7.14",
     "vue-tsc": "^1.0.12"
   }
