--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,6 +17,13 @@
     "src/_boilerplate/**/*",
     "src/__check/**/*",
   ],
+  "vueCompilerOptions": {
+    "plugins": [
+      "@vue-macros/volar/define-model",
+      "@vue-macros/volar/define-slots",
+      "vite-plugin-vue-component-preview/tooling"
+    ]
+  },
   "compilerOptions": {
     "baseUrl": ".",
     "outDir": "build",
@@ -40,6 +47,7 @@
     "noUnusedLocals": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
+    "importsNotUsedAsValues": "remove",
     "types": [
       "node",
       "vitest",
@@ -49,7 +57,9 @@
       "vite-plugin-vue-component-preview/client",
       "vite-plugin-vue-layouts/client",
       "vite-plugin-pwa/client",
-      "unplugin-vue-macros/macros-global"
+      "unplugin-vue-macros/macros-global",
+      "jquery",
+      "bootstrap",
     ],
   },
   "references": [
