--- a/app/.gitignore
+++ b/app/.gitignore
@@ -27,3 +27,16 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+
+.DS_Store
+.vite-ssg-dist
+.vite-ssg-temp
+*.local
+dist
+dist-ssr
+build
+build-ssr
+node_modules
+.idea/
+*.log
+cypress/downloads
