--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@7.27.1",
   "scripts": {
     "dev": "vite --port 8888 --open",
     "preview": "vite preview",
@@ -28,13 +29,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@fullhuman/postcss-purgecss": "^5.0.0",
-    "@popperjs/core": "^2.11.6",
     "@trainiac/html2canvas": "^1.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.13.0",
     "axios": "^1.3.3",
-    "bootstrap": "^5.2.3",
     "chalk": "^5.2.0",
     "core-js": "^3.28.0",
     "css-loader": "*",
@@ -47,7 +46,6 @@
     "html2canvas": "^1.4.1",
     "jest": "^29.4.2",
     "jquery": "^3.6.3",
-    "jquery.easing": "^1.4.1",
     "js-yaml": "^4.1.0",
     "jsdom": "^21.1.0",
     "jspdf": "^2.5.1",
@@ -58,15 +56,16 @@
     "portal-vue": "^3.0.0",
     "postcss": ">=8.4.6 <9.0.0",
     "postcss-preset-env": "^8.0.1",
-    "vite": "latest",
+    "vite": "^4.0.4",
     "vite-plugin-md": "^0.22.5",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
     "vue-loader": "^17.0.1",
+    "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@intlify/unplugin-vue-i18n": "^0.8.2",
+    "@intlify/unplugin-vue-i18n": "^0.8.1",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/bootstrap": "^5.2.6",
     "@types/jest": "^29.4.0",
@@ -99,8 +98,9 @@
     "vite-plugin-vue-component-preview": "^1.1.5",
     "vite-plugin-vue-inspector": "^3.3.2",
     "vite-ssg": "^0.22.1",
+    "vite-ssg-sitemap": "^0.4.3",
+    "vitest": "^0.29.1",
     "vue-markdown-loader": "^2.5.0",
-    "vue-router": "^4.1.6",
     "vue-template-compiler": "^2.7.14",
     "vue-tsc": "^1.0.12"
   }
