--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/core": "^9.13.0",
     "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
     "chalk": "^5.2.0",
     "core-js": "^3.28.0",
     "css-loader": "*",
@@ -46,6 +47,7 @@
     "html2canvas": "^1.4.1",
     "jest": "^29.4.2",
     "jquery": "^3.6.3",
+    "jquery.easing": "^1.4.1",
     "js-yaml": "^4.1.0",
     "jsdom": "^21.1.0",
     "jspdf": "^2.5.1",
