--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -95,6 +95,7 @@ jobs:
           elif [ "$IS_MAIN" = true ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID_UAT}" >> $GITHUB_OUTPUT
             echo "ENV=uat" >> $GITHUB_ENV
+            echo "IS_MAIN=true" >> $GITHUB_ENV
           elif [ "$IS_RELEASE" = 'true && true' ]; then
             echo "BUILD_ARTIFACT_UUID=${BUILD_ARTIFACT_UUID}" >> $GITHUB_OUTPUT
             echo "ENV=production" >> $GITHUB_ENV
@@ -104,27 +105,32 @@ jobs:
           fi
 
       - uses: actions/setup-node@v3
+        if: ${{ env.IS_MAIN != true }}
         with:
           node-version: latest
 
       - name: Install dependencies
+        if: ${{ env.IS_MAIN != true }}
         working-directory: app
         run: |
           npm install --global vite pnpm
           pnpm i
 
       - name: Build
+        if: ${{ env.IS_MAIN != true }}
         working-directory: app
         run: |
           pnpm run build-ci --mode $ENV
 
       - name: Compress build
+        if: ${{ env.IS_MAIN != true }}
         working-directory: app
         run: |
           cd ${{ env.BUILD_DIR }}
           zip -r ${{ env.BUILD_ARTIFACT }}.zip ./*
 
       - name: Upload build
+        if: ${{ env.IS_MAIN != true }}
         id: upload-build
         uses: actions/upload-artifact@v3
         with:
