--- a/.github/workflows/infra-app.yml
+++ b/.github/workflows/infra-app.yml
@@ -27,7 +27,7 @@ on:
       - '.github/workflows/infra-app.yml'
       - "app/**"
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10 #
   release:
     types:
       - published
