--- a/.github/workflows/infra-base.yml
+++ b/.github/workflows/infra-base.yml
@@ -28,7 +28,7 @@ on:
       - '.github/workflows/infra-base.yml'
       - 'workers/**'
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10 #
   release:
     types:
       - published
