system access token

--- a/.cicd/azure-pipelines.yml
+++ b/.cicd/azure-pipelines.yml
@@ -13,8 +13,8 @@ pool:
 variables:
   - name: source_repo
     value: "sp"
-  - name: dest_url
-    value: "https://dev.azure.com/shortpoet/_git/Shortpoet"
+  # - name: dest_url
+  #   value: "https://dev.azure.com/shortpoet/_git/Shortpoet"
 
 
 steps:
@@ -26,7 +26,7 @@ steps:
 - script: |
     source_repo="sp"
     # dest_url="https://shortpoet:$CPAT@dev.azure.com/shortpoet/Shortpoet/_git/Shortpoet"
-    dest_url="https://$PAT@dev.azure.com/shortpoet/Shortpoet/_git/Shortpoet"
+    dest_url="https://$SYSTEM_ACCESSTOKEN@dev.azure.com/shortpoet/Shortpoet/_git/Shortpoet"
     echo Starting the synchronization process
     echo "****Git clone****"
     echo "****Source Repo: $source_repo****"
