--- a/.cicd/azure-pipelines.yml
+++ b/.cicd/azure-pipelines.yml
@@ -3,9 +3,11 @@ resources:
     - webhook: github          ### Webhook alias
       connection: github    ### Incoming webhook service connection
 
-trigger:
-- main
-- develop
+# trigger:
+# - main
+# - develop
+
+trigger: none
 
 pool:
   vmImage: ubuntu-latest
